--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ joblib==0.14.0
 scikit-learn==0.20.0  
 seaborn==0.9.0  
 stopit==1.1.2 
-tpot==0.11.7  
 update-checker==0.18.0 
 xgboost==1.4.1
 itsdangerous==1.1.0
@@ -30,3 +29,4 @@ idna==2.10
 chardet==3.0.4
 urllib3==1.24.3
 six==1.15.0
+tpot
